TASK-1: consume pairguru API

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,12 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.movie-cover {
+  height: 150px;
+}
+
+.media-left {
+  .movie-cover {
+    height: 250px;
+  }
+}
