--- a/app/views/movies/_movies_table.html.haml
+++ b/app/views/movies/_movies_table.html.haml
@@ -4,12 +4,15 @@
       %tr
         %td= i + 1
         %td
-          %img.img-rounded{ src: movie.cover }
+          %img.img-rounded.movie-cover{ src: movie.cover }
         %td
           %h4
             = link_to movie.title, movie_path(movie)
+            %small.pull-right
+              Rating:
+              = movie.rating
           %p
             %strong
               = link_to movie.genre.name, movies_genre_path(movie.genre)
-            = ' (' + movie.released_at.to_s + ')'
+            = " (#{movie.released_at.year})"
           %p= movie.description
